<resources>
    <string name="app_name">Tores</string>
    <string name="finances">Finances</string>
    <string name="dashboard">Панель управления</string>
    <string name="mining">Майнинг</string>
    <string name="authorization">Авторизация</string>
    <string name="authorize">Авторизоваться</string>
    <string name="register">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="login_dots">Логин: </string>
    <string name="reset_password">Восстановление пароля</string>
    <string name="email">Email</string>
    <string name="reset">Восстановить</string>
    <string name="registration">Регистрация</string>
    <string name="balance">Баланс</string>
    <string name="mine">Майнить</string>
    <string name="buy_tokens">Купить токены</string>
    <string name="sell_tokens">Продать токены</string>
    <string name="send_tokens">Отправка токенов</string>
    <string name="bonus_balance">Бонусный баланс</string>
    <string name="bonus_balance_dots">Бонусный баланс:</string>
    <string name="current_rank_balance">Текущий ранговый баланс</string>
    <string name="details">Детали</string>
    <string name="detailed">Подробнее</string>
    <string name="income_for_all_time">Полученный доход за все время</string>
    <string name="income">Доход</string>
    <string name="rewards_for_all_time">Вознаграждения за все время</string>
    <string name="by_partners">Партнерские</string>
    <string name="by_ranks">Ранговые бонусы</string>
    <string name="five_last">5 последних</string>
    <string name="accruals">Начисления</string>
    <string name="registrations">Регистрации</string>
    <string name="has_no_internet">Нет подключения к интернету</string>
    <string name="tores_amount">%1$.2f TORES</string>
    <string name="tores_amount_str">%1$s TORES</string>
    <string name="tores_amount_int">%1$d TORES</string>
    <string name="line">LINE %1$s</string>
    <string name="plus_tores_amount">+%1$s TORES</string>
    <string name="in_date_and_time">%1$s в %2$s</string>
    <string name="shares">Доли</string>
    <string name="more">Ещё</string>
    <string name="topups_and_withdrawals">Покупка / Продажа токенов</string>
    <string name="transfers">Переводы</string>
    <string name="partner_rewards">Партнерские вознаграждения</string>
    <string name="bonuse_rewards">Бонусные вознаграждения</string>
    <string name="error_loading_data">Loading data error</string>
    <string name="total_topups">Всего выведено</string>
    <string name="sum">Сумма:</string>
    <string name="buying">Покупка</string>
    <string name="selling">Продажа</string>
    <string name="payment_await">Ожидает оплаты</string>
    <string name="cancelled_by_user">Отменена пользователем</string>
    <string name="cancelled">Отменена</string>
    <string name="paid">Оплачена</string>
    <string name="cancelled_by_admin">Отменена администратором</string>
    <string name="time_is_over">Время оплаты вышло</string>
    <string name="time_h_m_s">%1$s:%2$s:%3$s</string>
    <string name="waiting_tac">Waiting entering TAC</string>
    <string name="cancelled_due_to_tac_attempts">Cancelled due to tac attempts</string>
    <string name="awaiting">Исполняется</string>
    <string name="sent_to_exchange">Отправлено на биржу</string>
    <string name="performing">Исполняется</string>
    <string name="awaiting_withdraw">Ожидает выплаты</string>
    <string name="transaction_type_deposit_profit">Доход</string>
    <string name="transaction_type_open_deposit">Отправление</string>
    <string name="transaction_type_reinvest">Реинвест</string>
    <string name="transaction_to_main_balance">(Основной баланс)</string>
    <string name="transaction_to_rank_balance">(Ранговый баланс)</string>
    <string name="transaction_type_withdraw_from_deposit">Изъятие</string>
    <string name="funds_will_be_received_in">Средства поступят через:</string>
    <string name="cancel">Отменить</string>
    <string name="total_in_mining">Всего в майнинге</string>
    <string name="transaction_type_send_to_user">Отправка участнику</string>
    <string name="transaction_type_received_from_user">Получено от участника</string>
    <string name="transaction_type_sent_to_exchange">Отправлено на биржу</string>
    <string name="enter_the_code">Ввести код</string>
    <string name="partner_sum_dots">Сумма партнера:</string>
    <string name="performed">Выполнена</string>
    <string name="received_dots">Получено:</string>
    <string name="total_profit">Суммарный доход</string>
    <string name="ranks_member">Участник</string>
    <string name="ranks_client">Клиент</string>
    <string name="ranks_agent">Агент</string>
    <string name="ranks_manager">Менеджер</string>
    <string name="ranks_vip_manager">VIP Менеджер</string>
    <string name="ranks_director">Директор</string>
    <string name="ranks_director_1_star">Директор 1 звезда</string>
    <string name="ranks_director_2_stars">Директор 2 звезды</string>
    <string name="ranks_director_3_stars">Директор 3 звезды</string>
    <string name="ranks_director_4_stars">Директор 4 звезды</string>
    <string name="ranks_director_5_stars">Директор 5 звезд</string>
    <string name="ranks_director_6_stars">Директор 6 звезд</string>
    <string name="ranks_director_7_stars">Директор 7 звезд</string>
    <string name="ranks_director_8_stars">Директор 8 звезд</string>
    <string name="ranks_director_9_stars">Директор 9 звезд</string>
    <string name="ranks_president">Президент</string>
    <string name="reward">Награда</string>
    <string name="for_rank">За ранг</string>
    <string name="topup">Пополнение</string>
    <string name="topup_subtitle">Не отправляйте средства с бирж, обменных площадок или других проектов. При возникновении неполадок средства возвращаются исключительно на тот же кошелек откуда были отправлены.</string>
    <string name="topup_details_id">ID:</string>
    <string name="topup_details_date_and_time">Дата / Время:</string>
    <string name="topup_details_wallet">Кошелек:</string>
    <string name="topup_details_payment_sum">Сумма к оплате \n(с учетом комиссии ПС):</string>
    <string name="withdrawal_details_payment_sum">Сумма к получению \n(с учетом комиссии ПС):</string>
    <string name="modal_topups_status">Статус:</string>
    <string name="topup_details_sum_in_tores">Сумма в TORES:</string>
    <string name="modal_topups_confirmations">Подтверждений в сети:</string>
    <string name="modal_topups_time_for_pay">Время для исполнения заявки:</string>
    <string name="go_to_pay">Перейти к оплате</string>
    <string name="modal_topups_cancel">Отменить заявку</string>
    <string name="qr">qr</string>
    <string name="withdrawal">Продажа</string>
    <string name="password_send_on_email">На вашу почту отправлен одноразовый пароль.</string>
    <string name="enter_password_from_email">Введите его чтобы продолжить продажу токенов.</string>
    <string name="enter_pay_password">Введите Ваш платежный пароль</string>
    <string name="accept">Принять</string>
    <string name="sending_to_exchange">Перевод на биржу</string>
    <string name="transfer_transfer_info">Внимание! Зачисление перевода производится в течение нескольких минут в автоматическом режиме.</string>
    <string name="enter_code_from_email_for_transaction">Введите код, отправленный Вам на почту чтобы продолжить перевод токенов.</string>
    <string name="sending_to_user">Перевод</string>
    <string name="partner_program">Партнёрская программа</string>
    <string name="partners">Партнёры</string>
    <string name="ranks">Ранги</string>
    <string name="contacts">Контакты</string>
    <string name="common_info">Общая информация</string>
    <string name="history">История</string>
    <string name="your_sponsor">Ваш спонсор</string>
    <string name="partners_total_dots">Всего партнеров:</string>
    <string name="partners_amount">Количество партнёров</string>
    <string name="amount_active_partners_dots">Активных:</string>
    <string name="amount_not_active_partners_dots">Не активных:</string>
    <string name="send_to_mining_dots">Направлено на майнинг:</string>
    <string name="total_tors_turnover">Общий оборот TORES вашей структуры.</string>
    <string name="link_clicks_dots">Переходов по ссылке:</string>
    <string name="link_clicks_for_all_time">Переходов по вашей реф.ссылке за все время</string>
    <string name="on_sum_dots">На сумму:</string>
    <string name="total_tores_turnover">Общий оборот TORES в вашей структуре.</string>
    <string name="current_rank_dots">Текущий ранг:</string>
    <string name="current_level_dots">Текущий уровень:</string>
    <string name="referral_program_info"><b>Реферальная программа:</b>\n
1. Чтобы получать доход с дохода вашей первой линии, необходимо иметь на майнинге минимум 250 монет.\n\n
2. Чтобы получать доход с дохода второй линии, необходимо 5 партнеров в первой линии с депозитом минимум 250 TORES у каждого.\n\n
3. Чтобы получать доход с дохода со всех уровней, необходимо 20 партнеров во второй линии с депозитом минимум 250 TORES у каждого.\n\n
        <b>Процент дохода от майнинга нижестоящих партнеров по уровням:</b>\n
1 Level - 15%\n
2 Level - 10%\n
3 Level - 5%\n
4 Level - 3%\n
5 Level - 2%\n
6 Level - 1%</string>
    <string name="profit_24_hours">Суммарный доход за 24 часа</string>
    <string name="affiliate_percent_dots">Процент дохода:</string>
    <string name="profit_from_user_dots">Доход от участника:</string>
    <string name="watch_profit_from_tree">Посмотреть доход от участников</string>
    <string name="watch_profit_from_tree_title">Доход от участников</string>
    <string name="affiliate_users_no_found">Участников не найдено</string>
    <string name="next_rank_dots">Следующий ранг:</string>
    <string name="next_rank">Следующий ранг</string>
    <string name="referral_link">Реферальная ссылка</string>
    <string name="registered_at_dots">Зарегистрирован:</string>
    <string name="last_entrance_dots">Последний вход:</string>
    <string name="ip_dots">IP:</string>
    <string name="change_login_password">Сменить пароль входа</string>
    <string name="password_changing">Смена пароля</string>
    <string name="finance_password">Финансовый пароль</string>
    <string name="finance_password_description_short">Финансовый пароль служит для подтверждения финансовых операций.</string>
    <string name="rank_system">Ранговая система</string>
    <string name="about_ranks">О рангах</string>
    <string name="your_progress">Ваш прогресс</string>
    <string name="your_current_rank">Текущий ранг</string>
    <string name="personal_deposit">Личный депозит</string>
    <string name="your_referral_level">У вас %1$d уровень рефералов</string>
    <string name="marketing_base">Маркетинг база</string>
    <string name="marketing_base_tores">%1$s/%2$s TORES</string>
    <string name="rank_profit_tores">Премия %1$d TORES</string>
    <string name="rank_condition_or_more_branch">%1$d или более ветки</string>
    <string name="system_status">Статус в системе</string>
    <string name="referral_level">Уровень рефералов</string>
    <string name="payments">Выплаты</string>
    <string name="about_ranks_part_1">\tБонусная программа ToresCoin - это мощный дополнительный стимулятор и в тоже время катализатор ваших доходов.</string>
    <string name="about_ranks_part_2">\tМаксимально гибкая система позволит смелым и активным за весьма короткий срок получит заслуженные привилегии и ощутимые финансовые вознаграждения.</string>
    <string name="about_ranks_part_3">\tПо всем вопросам работы бонусной программы вы можете обратиться в наш общий телеграм чат @ToresCoin или на наш эмейл toresbusiness.help@gmail.com</string>
    <string name="conditions">Условия</string>
</resources>