<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/offset_x4"
                android:orientation="vertical">

                <TextView
                    style="@style/Widget.Tores.TextView.Title.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/offset_x4"
                    android:text="@string/authorization" />

                <!-- Логин -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLogin"
                    style="@style/Widget.Tores.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Пароль -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/Widget.Tores.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_x2"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvGoToResetPassword"
                    style="@style/Widget.Tores.TextView.Link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_x2"
                    android:text="@string/forgot_password" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAccept"
                    style="@style/Widget.Tores.Button.Wide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/offset_x2"
                    android:text="@string/authorize" />

                <TextView
                    android:id="@+id/tvGoToRegister"
                    style="@style/Widget.Tores.TextView.Link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/offset_x4"
                    android:layout_marginBottom="@dimen/offset_x4"
                    android:text="@string/register" />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <include layout="@layout/include_progressbar_overlay" />
</FrameLayout>