<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.Tores.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/offset_x4"
                android:layout_marginTop="@dimen/offset_x4"
                android:text="@string/about_ranks_part_1" />

            <TextView
                style="@style/Widget.Tores.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/offset_x4"
                android:layout_marginTop="@dimen/offset_x3"
                android:text="@string/about_ranks_part_2" />

            <TextView
                android:id="@+id/tvPart3"
                style="@style/Widget.Tores.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/offset_x4"
                android:layout_marginTop="@dimen/offset_x3"
                android:layout_marginBottom="@dimen/offset_x3"
                android:text="@string/about_ranks_part_3"
                android:textColorLink="@color/colorBlue" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>